Switch to PublishAWSLambda

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,13 +10,15 @@ pool:
   vmImage: 'Ubuntu-16.04'
 
 steps:
-- script: |
+- displayName: 'Install PowerShell Core'
+  script: |
     curl https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -
     curl https://packages.microsoft.com/config/ubuntu/16.04/prod.list | sudo tee /etc/apt/sources.list.d/microsoft.list
     sudo apt-get update
     sudo apt-get install -y powershell
-  displayName: 'Install PowerShell Core'
+  
 
-- script: |
+- displayName: 'Deploy Powershell as a Service (Invoke-Build)'
+  script: |
     pwsh -c '.\build.ps1'
-    displayName: 'Powershell Module Build and Test'
+  
